--- a/demo.html
+++ b/demo.html
@@ -82,7 +82,7 @@
     <input type="button" value="登入">
     <input type="submit" value="登入2">
     <button>
-        <img src="601.gif" width="25" height="25" alt="">
+        <img src="school.gif" width="25" height="25" alt="">
         登入3
     </button>
     <br>
