--- a/demo.html
+++ b/demo.html
@@ -82,7 +82,7 @@
     <input type="button" value="登入">
     <input type="submit" value="登入2">
     <button>
-        <img src="school.gif" width="25" height="25" alt="">
+        <img src="601.gif" width="25" height="25" alt="">
         登入3
     </button>
     <br>
@@ -107,7 +107,5 @@
             <td>8</td>          
         </tr>
     </table>
-</body>
-</html>
 </body>
 </html>
